<resources>
    <string name="app_name">Touche Time</string>
    <string name="home_title_1">CRIAR LUTA</string>
    <string name="home_title_2">Defina as regras da sua luta</string>
    <string name="fight_title">Luta oficial</string>
    <string name="custom_fight">Luta Personalizada</string>
    <string name="card_custom_view_title_1">Luta oficial</string>
    <string name="card_custom_view_description_1">Informe o nome dos atletas e utilize as regras oficiais da UWW para cada categoria.</string>
    <string name="card_custom_view_title_2">Personalizar luta</string>
    <string name="card_custom_view_description_2">Defina o tempo, superioridade técnica e quantidade de rounds da sua luta.</string>
    <string name="wrestler">WRESTLER</string>
    <string name="blue">Azul</string>
    <string name="red">Vermelho</string>
    <string name="athlete">Atleta</string>
    <string name="touche">Touche</string>
    <string name="category">Categoria</string>
    <string name="style">Estilo</string>
    <string name="weight">Peso</string>
    <string name="round">ROUND</string>
    <string name="interval">INTERVALO</string>
    <string name="chosen_option_view_title_1">Escolha a categoria</string>
    <string name="chosen_option_view_description_1">Escolha entre as categorias de idade oficiais da UWW</string>
    <string name="chosen_option_view_title_2">Escolha o estilo</string>
    <string name="chosen_option_view_description_2">Escolha entre Estilo Livre, Greco Romana e Livre Feminino</string>
    <string name="chosen_option_view_title_3">Escolha o peso</string>
    <string name="customize_fight_description">Escolha todos os padrões de acordo com a UWW</string>
    <string name="childrens_1">Infantil I</string>
    <string name="childrens_2">Infantil II</string>
    <string name="childrens_3">Infantil III</string>
    <string name="u15">U-15</string>
    <string name="u17">U-17</string>
    <string name="u20">U-20</string>
    <string name="u23">U-23</string>
    <string name="senior">Sênior</string>
    <string name="master">Veteranos</string>
    <string name="greco_roman">Greco Romana</string>
    <string name="woman_wrestling">Estilo Feminino</string>
    <string name="free_style">Estilo Livre</string>
    <string name="continue_fight">Continuar</string>
    <string name="restart_fight">Reiniciar luta</string>
    <string name="five_score">5</string>
    <string name="four_score">4</string>
    <string name="two_score">2</string>
    <string name="zero">0</string>
    <string name="superiority_technical">Superioridade técnica</string>
    <string name="rounds">Rounds</string>
    <string name="time_rounds">Tempo de cada round</string>
    <string name="time_intervals">Tempo dos intervalos</string>
    <string name="custom_your_fight">Personalize sua luta</string>
    <string name="finish">Concluir</string>
    <string name="skip" translatable="false">Pular</string>
    <string name="on_boarding_title_1">Crie lutas com regras oficiais</string>
    <string name="on_boarding_title_2">Personalize sua luta de forma fácil</string>
    <string name="on_boarding_title_3" translatable="false">Acompanhe o histórico de lutas</string>
    <string name="on_boarding_description_1">Use todas as regras oficiais da UWW para criar suas lutas com base em categoria, peso e idade.</string>
    <string name="on_boarding_description_2">Deixe sua luta ou treinamento mais dinâmico, defina tempo, quantidade de rounds e pontuações.</string>
    <string name="on_boarding_description_3" translatable="false">Aqui será um subtítulo com algumas informações bem importantes.</string>
    <string name="fight_name_default_1" translatable="false">U-20  |  ESTILO FEMININO -65kg</string>
    <string name="fight_name_default_2" translatable="false">SÊNIOR  |  GRECO ROMANO -79kg</string>
    <string name="last_fight" translatable="false">Ultimas lutas</string>
    <string name="fight_history" translatable="false">Histórico de lutas</string>
</resources>