<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/close"
        style="@style/ButtonScore"
        android:background="@drawable/background_score_red"
        android:src="@drawable/ic_close_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/five_score"
        style="@style/ButtonScore"
        android:layout_width="@dimen/button_more_score_size"
        android:layout_height="@dimen/button_more_score_size"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:layout_marginBottom="@dimen/spacing_small"
        android:text="@string/five_score"
        app:layout_constraintBottom_toTopOf="@+id/close"
        app:layout_constraintEnd_toEndOf="@+id/close"
        tools:background="@drawable/background_score_red" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/four_score"
        style="@style/ButtonScore"
        android:layout_width="@dimen/button_more_score_size"
        android:layout_height="@dimen/button_more_score_size"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:text="@string/four_score"
        app:layout_constraintBottom_toBottomOf="@+id/close"
        app:layout_constraintEnd_toStartOf="@id/close"
        app:layout_constraintTop_toTopOf="@id/close"
        tools:background="@drawable/background_score_red" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/two_score"
        style="@style/ButtonScore"
        android:layout_width="@dimen/button_more_score_size"
        android:layout_height="@dimen/button_more_score_size"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:text="@string/two_score"
        app:layout_constraintEnd_toEndOf="@id/close"
        app:layout_constraintTop_toBottomOf="@+id/close"
        tools:background="@drawable/background_score_red" />

</androidx.constraintlayout.widget.ConstraintLayout>